Language system polish, command system polish